--- a/copyright-infringement.html
+++ b/copyright-infringement.html
@@ -373,7 +373,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
   <center><a href="https://scholar.google.co.in" title="google scholar" target="blank"><img src="http://www.internationaljournalisar.org/images/google-scholar.png" alt="IJMCT - ISAR Journals" width="170" height="80" /></a></center></div>
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-<center><a href="https://www.dx.doi.org" title="doi" target="blank"><img src="http://www.internationaljournalisar.org/images/crossref.jpg" alt="IJMCT - ISAR Journals" width="170" height="80" /></a></center></div>
+<center><a href="/Crossref.html" title="Crossref"><img src="http://www.internationaljournalisar.org/images/crossref.jpg" alt="IJMCT - ISAR Journals" width="170" height="80" /></a></center></div>
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
   <center><a href="https://www.mendeley.com/profiles/isar---international-scientif/?viewAsOther=true" title="mendaly" target="blank"><img src="http://www.internationaljournalisar.org/images/mendaly.png" alt="IJMCT - ISAR Journals" width="170" height="80" /></a></center></div>
