--- a/CurrentIssues.html
+++ b/CurrentIssues.html
@@ -242,9 +242,9 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
       <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Downloads</h3></div></div></div>
       <div class="module-body">
      <ul class="nav menu">
-<li class="item-135"><a href="http://www.ijp2p.org/images/IJPT-PaperFormat.docx" title="IJPT-PaperFormat">Paper Template</a></li>
-<li class="item-136"><a href="http://www.ijp2p.org/images/IJPT-CopyrightForm.docx" title="IJPT-CopyrightForm">Copyright Form</a></li>
-<li class="item-159"><a href="http://www.ijp2p.org/images/IJPT-Registration.docx" title="IJPT-Registration">Registration Form</a></li>
+<li class="item-135"><a href="/images/IJMCTPaperFormat.docx" title="PaperFormat">Paper Template</a></li>
+<li class="item-136"><a href="/images/IJMCTCopyrightForm.docx" title="CopyrightForm">Copyright Form</a></li>
+<li class="item-159"><a href="/images/IJMCTRegistration.doc" title="Registration">Registration Form</a></li>
         </div>
         </div>
 	</div><br>
@@ -316,6 +316,13 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 <td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P1.pdf" target="_blank" rel="noopener noreferrer">Mean Labeling of Some Classes of Graphs</a></p>
 <p>Authors: R.Veerappan , S.Tamilarasi </p></td>
 <td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P1</p></td></tr>
+
+<tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
+<p> </p><p>02</p></td>
+
+<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P2.pdf" target="_blank" rel="noopener noreferrer">Solving Partial Differential Equations with Matlab</a></p>
+<p>Authors: M. Sundari, R.Vaithiyalingam </p></td>
+<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P2</p></td></tr>
 
 <tr style="height: 24px;">
 <td style="width: 674px; height: 24px; text-align: center;" colspan="3">Paper uploading is in progress. Author(S) are requested to complete their paper formalities.</td></tr>
