--- a/Vol1IssueNo.4.html
+++ b/Vol1IssueNo.4.html
@@ -242,9 +242,9 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
       <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Downloads</h3></div></div></div>
       <div class="module-body">
      <ul class="nav menu">
-<li class="item-135"><a href="http://www.ijp2p.org/images/IJPT-PaperFormat.docx" title="IJPT-PaperFormat">Paper Template</a></li>
-<li class="item-136"><a href="http://www.ijp2p.org/images/IJPT-CopyrightForm.docx" title="IJPT-CopyrightForm">Copyright Form</a></li>
-<li class="item-159"><a href="http://www.ijp2p.org/images/IJPT-Registration.docx" title="IJPT-Registration">Registration Form</a></li>
+<li class="item-135"><a href="/images/IJMCTPaperFormat.docx" title="PaperFormat">Paper Template</a></li>
+<li class="item-136"><a href="/images/IJMCTCopyrightForm.docx" title="CopyrightForm">Copyright Form</a></li>
+<li class="item-159"><a href="/images/IJMCTRegistration.doc" title="Registration">Registration Form</a></li>
         </div>
         </div>
 	</div><br>
