Qr Code other new paper updated

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -305,7 +305,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
     <div class="inner">
     <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">QR - Code </h3></div></div></div>
     <div class="module-body">
-    <img src="/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />
+    <img src="/images/IJMCT.png" width="170" height="120" alt="QR-code" />
         </div>
         </div>
 	</div>
