--- a/Crossref.html
+++ b/Crossref.html
@@ -278,7 +278,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
     <div class="inner">
     <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">QR - Code </h3></div></div></div>
     <div class="module-body">
-    <img src="/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />
+    <img src="/images/IJMCT.png" width="170" height="120" alt="QR-code" />
         </div>
         </div>
 	</div>
@@ -302,7 +302,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 <font face="Cambria" font size="3">
 <p><strong><font color="blue"> Cross Reference</font></strong></p>
 
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ISAR International Journal of Mathematics and Computing Techniques is member of the CrossRef.The DOI prefix allotted</p> 
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ISAR International Journal of Mathematics and Computing Techniques is member of the CrossRef.The DOI prefix allotted</p>
 
 <p align="justify"><center><strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;IJMCT is <img src="http://www.internationaljournalisar.org/images/doi.gif" alt="IJMCT - Engineering Journals"/>10.29126/24557994</center></strong></p>
 
