--- a/CurrentIssues.html
+++ b/CurrentIssues.html
@@ -279,7 +279,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
     <div class="inner">
     <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">QR - Code </h3></div></div></div>
     <div class="module-body">
-    <img src="http://www.ijp2p.org/images/ISAR IJPT_code.png" width="170" height="120" alt="QR-code" />
+    <img src="/images/IJMCT.png" width="170" height="120" alt="QR-code" />
         </div>
         </div>
 	</div>
@@ -312,17 +312,31 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 
 <tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
 <p> </p><p>01</p></td>
-
 <td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P1.pdf" target="_blank" rel="noopener noreferrer">Mean Labeling of Some Classes of Graphs</a></p>
-<p>Authors: R.Veerappan , S.Tamilarasi </p></td>
+<p><img src="/images/Author.png">- R.Veerappan , S.Tamilarasi</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P1</p></td>
 <td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P1</p></td></tr>
 
 <tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
 <p> </p><p>02</p></td>
-
 <td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P2.pdf" target="_blank" rel="noopener noreferrer">Solving Partial Differential Equations with Matlab</a></p>
-<p>Authors: M. Sundari, R.Vaithiyalingam </p></td>
+<p><img src="/images/Author.png">- M. Sundari, R.Vaithiyalingam</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P2</p></td>
 <td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P2</p></td></tr>
+
+<tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
+<p> </p><p>03</p></td>
+<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P3.pdf" target="_blank" rel="noopener noreferrer">Improving Prototype-Based Classification by Fitting the Similarity based on Experts Know How and Advanced Image Analysis for Quantitative Measurements of Cellular Events</a></p>
+<p><img src="/images/Author.png">- Petra Perner</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P3</p></td>
+<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P3</p></td></tr>
+
+<tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
+<p> </p><p>04</p></td>
+<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P4.pdf" target="_blank" rel="noopener noreferrer">Evaluating and Improving the Performance of Cryptosystem with Low Latency Framework on Multi-Core System</a></p>
+<p><img src="/images/Author.png">- Kunal Bhangale, Chaitanya Deshmukh, Shubham Jadhav, Tejas Kshirsagar</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P4</p></td>
+<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P4</p></td></tr>
 
 <tr style="height: 24px;">
 <td style="width: 674px; height: 24px; text-align: center;" colspan="3">Paper uploading is in progress. Author(S) are requested to complete their paper formalities.</td></tr>
