--- a/Vol1IssueNo.5.html
+++ b/Vol1IssueNo.5.html
@@ -254,11 +254,23 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
     <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Our Publication</h3></div></div></div>
     <div class="module-body">
     <ul class="nav menu">
-<li class="item-304"><a href="http://www.ijretjournal.org" title="ISAR-IJRET" target="blank">ISAR - IJRET</a></li>
-<li class="item-302"><a href="http://www.ijcsejournal.org" title="ISAR-IJCSE" target="blank">ISAR - IJCSE</a></li>
-<li class="item-301"><a href="http://www.mathsjournal.org" title="ISAR-IJMCT" target="blank">ISAR - IJMCT</a></li>
-<li class="item-300"><a href="http://www.ijp2p.org" title="ISAR-IJPT" target="blank">ISAR - IJPT</a></li>
-<li class="item-298"><a href="http://www.internationaljournalisar.org" title="ISAR-IJPT" target="blank">More Journals</a></li></ul>
+<li class="item-302"><a href="http://www.engjournal.org" alt="ISAR IJRET" title="International Journal of Research in Engineering Technology" target="blank">ISAR -  ENGINEERING </a></li>
+<li class="item-302"><a href="http://www.ijcsejournal.org" alt="ISAR IJCSE" title="International Journal of Computer Science Engineering Techniques" target="blank">ISAR - IJCSE</a></li>
+<li class="item-301"><a href="http://www.mathsjournal.org" alt="ISAR-IJMCT" title="ISAR International Journal of Mathematics and Computing Techniques" target="blank">ISAR - IJMCT</a></li>
+<li class="item-300"><a href="http://www.ijp2p.org" alt="ISAR-IJPT" title="ISAR International Journal of P2P Network and Techniques" target="blank">ISAR - IJPT</a></li>
+<li class="item-300"><a href="http://www.ijeeejournal.org" alt="ISAR-IJEEE" title="International Journal of Electrical Engineering and Ethics" target="blank">ISAR - IJEEE</a></li>
+<li class="item-300"><a href="http://www.internationaljournalisar.org/IJECE/index.html" alt="ISAR-IJECE" title="International Journal of Electronics and Communication Ethics" target="blank">ISAR - IJECE</a></li>
+<li class="item-298"><a href="http://www.internationaljournalisar.org" title="ISAR Journals" target="blank">More Journals</a></li></ul>
+        </div>
+        </div>
+	</div><br>
+
+ <div class="module">
+    <div class="inner">
+    <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Help Link</h3></div></div></div>
+    <div class="module-body">
+    <ul class="nav menu">
+ <img src="http://www.internationaljournalisar.org/images/whatsapp.png" width="30" height="30" alt="Help Desk" /> <strong><font size="3"><a>994046 4920</a>(24x7)</font></strong></ul>
         </div>
         </div>
 	</div><br>
@@ -267,7 +279,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
     <div class="inner">
     <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">QR - Code </h3></div></div></div>
     <div class="module-body">
-    <img src="http://www.ijp2p.org/images/ISAR IJPT_code.png" width="170" height="120" alt="QR-code" />
+    <img src="/images/IJMCT.png" width="170" height="120" alt="QR-code" />
         </div>
         </div>
 	</div>
@@ -300,18 +312,31 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 
 <tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
 <p> </p><p>01</p></td>
-
 <td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P1.pdf" target="_blank" rel="noopener noreferrer">Mean Labeling of Some Classes of Graphs</a></p>
-<p>Authors: R.Veerappan , S.Tamilarasi </p></td>
+<p><img src="/images/Author.png">- R.Veerappan , S.Tamilarasi</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P1</p></td>
 <td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P1</p></td></tr>
-
 
 <tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
 <p> </p><p>02</p></td>
-
 <td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P2.pdf" target="_blank" rel="noopener noreferrer">Solving Partial Differential Equations with Matlab</a></p>
-<p>Authors: M. Sundari, R.Vaithiyalingam </p></td>
+<p><img src="/images/Author.png">- M. Sundari, R.Vaithiyalingam</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P2</p></td>
 <td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P2</p></td></tr>
+
+<tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
+<p> </p><p>03</p></td>
+<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P3.pdf" target="_blank" rel="noopener noreferrer">Improving Prototype-Based Classification by Fitting the Similarity based on Experts Know How and Advanced Image Analysis for Quantitative Measurements of Cellular Events</a></p>
+<p><img src="/images/Author.png">- Petra Perner</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P3</p></td>
+<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P3</p></td></tr>
+
+<tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
+<p> </p><p>04</p></td>
+<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P4.pdf" target="_blank" rel="noopener noreferrer">Evaluating and Improving the Performance of Cryptosystem with Low Latency Framework on Multi-Core System</a></p>
+<p><img src="/images/Author.png">- Kunal Bhangale, Chaitanya Deshmukh, Shubham Jadhav, Tejas Kshirsagar</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P4</p></td>
+<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P4</p></td></tr>
 
 <tr style="height: 24px;">
 <td style="width: 674px; height: 24px; text-align: center;" colspan="3">Paper uploading is in progress. Author(S) are requested to complete their paper formalities.</td></tr>
