--- a/Topics.html
+++ b/Topics.html
@@ -259,7 +259,7 @@
  <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
    <center><a href="http://www.mathsjournal.org/Joinus.html" title="callReviewers" target="blank"><img src="http://www.internationaljournalisar.org/images/callReviewers.jpg" alt="IJRET" width="170" height="95" /></a></center></div>
 
- <img src="http://www.mathsjournal.org/images/ISAR IJMCT_code.png" width="170" height="120" alt="QR-code" />
+ <img src="http://www.mathsjournal.org/images/IJMCT.png" width="170" height="120" alt="QR-code" />
 
  <p align="center" style="font-size:12px; color:#000099"><a href="http://www.mathsjournal.org/indexing.html">and many more... </a></p>
 			</div>
