--- a/CurrentIssues.html
+++ b/CurrentIssues.html
@@ -338,6 +338,13 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 <p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P4</p></td>
 <td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P4</p></td></tr>
 
+<tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
+<p> </p><p>05</p></td>
+<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume1/Issue5/IJMCT-V1I5P5.pdf" target="_blank" rel="noopener noreferrer">Android Application for Accidental Management System Using QR Code</a></p>
+<p><img src="/images/Author.png">- Nilesh Ingle,Gangadhar Bhise, Sahil Handoo, Vyankatesh Javalge, Miss. Rachana Mudholkar</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V1I5P5</p></td>
+<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V1I5P5</p></td></tr>
+
 <tr style="height: 24px;">
 <td style="width: 674px; height: 24px; text-align: center;" colspan="3">Paper uploading is in progress. Author(S) are requested to complete their paper formalities.</td></tr>
 </tbody>
