--- a/index.html
+++ b/index.html
@@ -363,7 +363,27 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 <p class="MsoNormal" style="margin: 10px 10px 0.0001pt; padding: 0px; line-height: normal;"><b> </b></p>
 </td>
 
+</table><br>
+
+<p><span style="font-family: cambria; font-size: 13pt;">&nbsp; <strong>ISAR Journals Advisory/Editorial Board<img src="http://www.ijetjournal.org/images/newbut.gif" alt="ijct"><br /></strong></span></p>
+<table style="border-collapse: collapse; margin-left: auto; margin-right: auto; width: 450px; height: 149px;" border="2">
+<tbody>
+<p><Marquee>
+<img src="http://www.internationaljournalisar.org//Board_members/01.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/02.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/03.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/04.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/05.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/06.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/07.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/08.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/09.png" width="100" height="68"/>
+<img src="http://www.internationaljournalisar.org//Board_members/10.png" width="100" height="68"/>
+</Marquee><a href="/Board-Member.html"><font color="red" font size="2">More Click Here</font></a></p>
+</tbody>
 </table>
+<br>
+
 
 <h2 style="text-align: justify;"><span lang="EN-IN"><center>Volume 1 Issue 5 , <span class="monthDemo">:</center></span></h2>
 <table width="50%">
