--- a/Topics.html
+++ b/Topics.html
@@ -434,7 +434,7 @@
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <nav class="social">
           <ul>
-            <li><a href="https://twitter.com/ISAR_JOURNALS" target="blank">Twitter <i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://twitter.com/journals_isar/ISAR_JOURNALS" target="blank">Twitter <i class="fa fa-twitter"></i></a></li>
 
               <li><a href="#" target="blank">Google+ <i class="fa fa-dribbble"></i></a></li>
 
