--- a/submit.html
+++ b/submit.html
@@ -543,7 +543,7 @@
 <div class="social">
   <a href="https://www.facebook.com/ISAR-Journals-737205039741272/?ref=bookmarks" target="blank" class="link facebook" ><span class="fa fa-facebook-square"></span></a>
   <a href="https://www.linkedin.com/in/international-scientific-and-research-2551bb143/" class="link google-plus" target="blank"><span class="fa fa-linkedin-square">
-  <a href="https://twitter.com" class="link twitter" target="blank"><span class="fa fa-twitter"></span></a>
+  <a href="https://twitter.com/journals_isar" class="link twitter" target="blank"><span class="fa fa-twitter"></span></a>
 </span></a>
 </div>
 </body>
