--- a/callforpaper.html
+++ b/callforpaper.html
@@ -483,14 +483,24 @@ were used latex then send it PDF format.</li><br>
 
     <div id="rightbar-w">
     <div id="sidebar">
-        <div class="module">
+    <!--<div class="module">
         <div class="inner">
 				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Call for Papers</h3></div></div></div>
 			    <div class="module-body">
 	        <font face="" font size="2"font color="brown"><strong>Notification  :</font><font face="" font size="2"font color="blue"> <span class="monthDemo"></span></strong></font><br><br><font face="" font size="2"font color="brown"><strong>Frequency :</font><font face="" font size="2"font color="blue"> 6 issues per year</font></strong><br><br><font face="" font size="2"font color="brown"><strong>Subject :</font><font face="" font size="2"font color="blue"> Mathematics and Computing Techniques</strong></font>
         </div>
         </div>
+	</div><br>-->
+
+<div class="module">
+        <div class="inner">
+				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJMCT Impact-Factor </h3></div></div></div>
+			    <div class="module-body">
+	        <a href="/images/ipindex.pdf" title="EMS " target="blank"><img src="/images/ipif.png" alt="ISAR" width="185" height="180" /></a><br>
+           </div>
+        </div>
 	</div><br>
+
 
 
 <div class="module">
