--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 <br>
 
 
-<h2 style="text-align: justify;"><span lang="EN-IN"><center>Volume 2 Issue 1 , <span class="monthDemo">:</center></span></h2>
+<h2 style="text-align: justify;"><span lang="EN-IN"><center>Volume 2 Issue 2 , <span class="monthDemo">:</center></span></h2>
 <table width="50%">
 
  <p>
@@ -425,6 +425,15 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 <p><span style="font-family: cambria; font-size: 11pt;"><font color="#000080"><strong>&nbsp;<span class="dateDemo"></a></span></span></STRONG></p>
 </td>
 
+<tr>
+<td style="width: 1250.6pt; border: 1pt solid black; padding: 0in 5.4pt;" valign="top" width="213">
+<ul>
+<p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; DOI</strong><strong> &nbsp;&nbsp; <br /></strong></span></p>
+<p class="MsoNormal" style="margin: 10px 10px 0.0001pt; padding: 3px; line-height: normal;"><b> </b></p>
+</td>
+<td style="width: 959.6pt; border-style: solid solid solid none; border-top-color: black; border-right-color: black; border-bottom-color: black; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 0in 5.4pt;" valign="top" width="213">
+<p><span style="font-family: cambria; font-size: 13pt;"><font color="#FF0000"><strong>&nbsp;10.29126/245557994</span></strong></p>
+</td>
 
 
 <tr>
@@ -439,7 +448,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 </td>
 <td style="width: 959.6pt; border-style: solid solid solid none; border-top-color: black; border-right-color: black; border-bottom-color: black; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 0in 5.4pt;" valign="top" width="213">
 
-<p><span style="font-family: cambria; font-size: 11pt;">&nbsp;  Within two days</a></span></p>
+<p><span style="font-family: cambria; font-size: 11pt;">&nbsp;  As soon as possible based on reviewer reply</a></span></p>
 </td>
 <tr>
 <td style="width: 1250.6pt; border: 1pt solid black; padding: 0in 5.4pt;" valign="top" width="213">
