updated call for papers and IF

--- a/CurrentIssues.html
+++ b/CurrentIssues.html
@@ -226,10 +226,18 @@ font-style:italic;
             <div id="leftbar-w">
 
     <div id="sidebar">
-    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Downloads</h3></div></div></div>
+    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Call for paper</h3></div></div></div>
     <div class="inner">
     <div class="module-body">
-<center><a href="http://ems.mathsjournal.org/menuscript.php" title="Submit Papers" target="blank"><img src="/images/spn9.gif" alt="IJMCT - ISAR Journals" width="180" height="100" /></a></center></div>
+<center><p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Last date</strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt;"><font color="#000080"><strong>&nbsp; <span class="dateDemo"><img src="/images/new.gif" align="#" style="margin:0px"></a></font></span></span></strong></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Email-ID </strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt; "><font color="#000080"><strong>&nbsp; IJMCTchief@gmail.com </strong><strong> &nbsp;&nbsp; <br /></strong></font></span></p></br>
+
+				</center></div>
 
         </div>
         </div>
@@ -237,7 +245,7 @@ font-style:italic;
 
 
     <div id="sidebar">
-    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Downloads</h3></div></div></div>
+    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJMCT Menu</h3></div></div></div>
     <div class="inner">
     <div class="module-body">
 
@@ -361,7 +369,7 @@ font-style:italic;
    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.mathsjournal.org/Volume2/Issue1/IJMCT-V2I1P1.pdf">Tweet</a>
    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
    </div></div>
-   
+
    <div></div><a href='http://scholar.google.com/scholar?hl=en&q=Evaluating and Improving the Performance of Cryptosystem with Low Latency Framework on Multi-Core System+ijeeejournal.org' target='_blank'><img src='images/google.png' width="68" height="25" style="margin:5px"/></a></div>
 
 </td>
