--- a/Peer-review.html
+++ b/Peer-review.html
@@ -231,12 +231,20 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 
       <div class="module">
       <div class="inner">
-      <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Online Submission</h3></div></div></div>
+      <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Call for paper</h3></div></div></div>
       <div class="module-body">
      <ul class="nav menu">
 
 <div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="http://ems.mathsjournal.org/menuscript.php" title="Submit Papers" target="blank"><img src="/images/spn9.gif" alt="IJMCT - ISAR Journals" width="180" height="100" /></a></center></div>
+  <center><p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Last date</strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt;"><font color="#000080"><strong>&nbsp; <span class="dateDemo"><img src="/images/new.gif" align="#" style="margin:0px"></a></font></span></span></strong></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Email-ID </strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt; "><font color="#000080"><strong>&nbsp; IJMCTchief@gmail.com </strong><strong> &nbsp;&nbsp; <br /></strong></font></span></p></br>
+
+				</center></div>
 
         </div>
         </div>
@@ -376,7 +384,8 @@ ISAR IJMCT paper review process is completed in the following steps and we gives
         <div class="inner">
 				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJMCT Impact-Factor </h3></div></div></div>
 			    <div class="module-body">
-	        <a href="/images/ipindex.pdf" title="EMS " target="blank"><img src="/images/ipif.png" alt="ISAR" width="160" height="170" /></a><br>
+	        <a href="#" title="IJMCT Impact-Factor"><img src="/images/ijmctif.png" alt="ISAR" width="190" height="140" /></a><br>
+	        <a href="/images/ipindex.pdf" title="IJMCT Impact-Factor " target="blank"><img src="/images/iplogo.png" alt="ISAR" width="180" height="100" /></a><br>
            </div>
         </div>
 	</div><br>
