--- a/index.html
+++ b/index.html
@@ -226,21 +226,27 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 
 <!--Left Menu start-->
             <div id="leftbar-w">
-    <div id="sidebar">
+			         <div id="sidebar">
+			 	<div class="module">
+				<div class="inner">
+				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Call for Paper </h3></div></div></div>
+				<div class="module-body">
+				<ul class="nav menu">
 
+			<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
+			<center><p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Last date</strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
 
-      <div class="module">
-      <div class="inner">
-      <div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Online Submission</h3></div></div></div>
-      <div class="module-body">
-     <ul class="nav menu">
+			<p><span style="font-family: cambria; font-size: 11pt;"><font color="#000080"><strong>&nbsp; <span class="dateDemo"><img src="/images/new.gif" align="#" style="margin:0px"></a></font></span></span></strong></p></br>
 
-<div class="divround2"   style=" border: 0px solid #0033CC; padding: 0px; " >
-  <center><a href="http://ems.mathsjournal.org/menuscript.php" title="Submit Papers" target="blank"><img src="/images/spn9.gif" alt="IJMCT - ISAR Journals" width="180" height="100" /></a></center></div>
+			<p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Email-ID </strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
 
-        </div>
-        </div>
-	</div><br>
+			<p><span style="font-family: cambria; font-size: 11pt; "><font color="#000080"><strong>&nbsp; IJMCTchief@gmail.com </strong><strong> &nbsp;&nbsp; <br /></strong></font></span></p></br>
+
+				</center></div>
+
+				</div>
+				</div>
+				</div><br>
 
         	<div class="module">
         <div class="inner">
@@ -485,7 +491,6 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
      <p><span style="font-family: cambria; font-size: 11pt;">&nbsp;&nbsp;<strong>Processing Charges</strong></span></p>
 
 
-
 <p class="MsoNormal" style="margin: 10px 10px 0.0001pt; padding: 03px; line-height: normal;"><b> </b></p>
 </td>
 <td style="width: 959.6pt; border-style: solid solid solid none; border-top-color: black; border-right-color: black; border-bottom-color: black; border-top-width: 1pt; border-right-width: 1pt; border-bottom-width: 1pt; padding: 0in 5.4pt;" valign="top" width="213">
@@ -513,9 +518,10 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 
 <div class="module">
         <div class="inner">
-				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJMCT Impact-Factor </h3></div></div></div>
+				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJCSE Impact-Factor </h3></div></div></div>
 			    <div class="module-body">
-	        <a href="/images/ipindex.pdf" title="EMS " target="blank"><img src="/images/ipif.png" alt="ISAR" width="185" height="180" /></a><br>
+	        <a href="#" title="IJMCT Impact-Factor"><img src="/images/ijmctif.png" alt="ISAR" width="190" height="140" /></a><br>
+	        <a href="/images/ipindex.pdf" title="IJMCT Impact-Factor " target="blank"><img src="/images/iplogo.png" alt="ISAR" width="180" height="100" /></a><br>
            </div>
         </div>
 	</div><br>
