--- a/Crossref.html
+++ b/Crossref.html
@@ -204,10 +204,18 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
             <div id="leftbar-w">
 
     <div id="sidebar">
-    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Downloads</h3></div></div></div>
+    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Call for paper</h3></div></div></div>
     <div class="inner">
     <div class="module-body">
-  <center><a href="http://ems.mathsjournal.org/menuscript.php" title="Submit Papers" target="blank"><img src="/images/spn9.gif" alt="IJMCT - ISAR Journals" width="180" height="100" /></a></center></div>
+  <center><p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Last date</strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt;"><font color="#000080"><strong>&nbsp; <span class="dateDemo"><img src="/images/new.gif" align="#" style="margin:0px"></a></font></span></span></strong></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Email-ID </strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
+
+			<p><span style="font-family: cambria; font-size: 11pt; "><font color="#000080"><strong>&nbsp; IJMCTchief@gmail.com </strong><strong> &nbsp;&nbsp; <br /></strong></font></span></p></br>
+
+				</center></div>
 
         </div>
         </div>
@@ -215,7 +223,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 
 
     <div id="sidebar">
-    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Downloads</h3></div></div></div>
+    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJMCT Menu</h3></div></div></div>
     <div class="inner">
     <div class="module-body">
 
@@ -325,12 +333,13 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 
     <div id="rightbar-w">
     <div id="sidebar">
-        <div class="module">
+<div class="module">
         <div class="inner">
-				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Call for Papers</h3></div></div></div>
+				<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJMCT Impact-Factor </h3></div></div></div>
 			    <div class="module-body">
-	        <font face="" font size="2"font color="brown"><strong>Notification  :</font><font face="" font size="2"font color="blue"> <span class="monthDemo"></span></strong></font><br><br><font face="" font size="2"font color="brown"><strong>Frequency :</font><font face="" font size="2"font color="blue"> 6 issues per year</font></strong><br><br><font face="" font size="2"font color="brown"><strong>Subject :</font><font face="" font size="2"font color="blue"> Mathematics and Computing Techniques</strong></font>
-        </div>
+	        <a href="#" title="IJMCT Impact-Factor"><img src="/images/ijmctif.png" alt="ISAR" width="190" height="140" /></a><br>
+	        <a href="/images/ipindex.pdf" title="IJMCT Impact-Factor " target="blank"><img src="/images/iplogo.png" alt="ISAR" width="180" height="100" /></a><br>
+           </div>
         </div>
 	</div><br>
 
