--- a/Indexing.html
+++ b/Indexing.html
@@ -201,21 +201,33 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 	</div>
 
 	</div>
-            <div id="leftbar-w">
+            <!--Left Menu start-->
+			            <div id="leftbar-w">
+						         <div id="sidebar">
+						 	<div class="module">
+							<div class="inner">
+							<div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Call for Paper </h3></div></div></div>
+							<div class="module-body">
+							<ul class="nav menu">
+
+
+						<center><p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Last date</strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
+
+						<p><span style="font-family: cambria; font-size: 11pt;"><font color="#000080"><strong>&nbsp; <span class="dateDemo"><img src="/images/new.gif" align="#" style="margin:0px"></a></font></span></span></strong></p></br>
+
+						<p><span style="font-family: cambria; font-size: 11pt;"><strong>&nbsp; Submission Email-ID </strong><strong> &nbsp;&nbsp; <br /></strong></span></p></br>
+
+						<p><span style="font-family: cambria; font-size: 11pt; "><font color="#000080"><strong>&nbsp; IJMCTchief@gmail.com </strong><strong> &nbsp;&nbsp; <br /></strong></font></span></p></br>
+
+							</center></div>
+
+							</div>
+							</div>
+				</div><br>
+
 
     <div id="sidebar">
-    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Downloads</h3></div></div></div>
-    <div class="inner">
-    <div class="module-body">
-  <center><a href="http://ems.mathsjournal.org/menuscript.php" title="Submit Papers" target="blank"><img src="/images/spn9.gif" alt="IJMCT - ISAR Journals" width="180" height="100" /></a></center></div>
-
-        </div>
-        </div>
-	</div><br>
-
-
-    <div id="sidebar">
-    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">Downloads</h3></div></div></div>
+    <div class="module"><div class="h3c"><div class="h3r"><div class="h3l"><h3 class="module-title">IJMCT Menu</h3></div></div></div>
     <div class="inner">
     <div class="module-body">
 
