--- a/Archives.html
+++ b/Archives.html
@@ -338,7 +338,7 @@ JCEMediaBox.init({popup:{width:"",height:"",legacy:0,lightbox:0,shadowbox:0,resi
 </td>
 <td style="text-align: center;">
 <p> </p>
-<p><a href="" target="_blank" >Volume-2 Issue-2</a></p>
+<p><a href="/Vol2IssueNo.2.html" target="_blank" >Volume-2 Issue-2</a></p>
 </td>
 
 <td style="text-align: center;">
