--- a/Vol2IssueNo.2.html
+++ b/Vol2IssueNo.2.html
@@ -337,7 +337,7 @@ font-style:italic;
 <td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume2/Issue2/IJMCT-V2I2P1.pdf" target="_blank" rel="noopener noreferrer">A Survey Paper on Computer-Aided Diagnosis: An Approach for Lung Cancer Nodule Detection</a></p>
 <p><img src="/images/Author.png">- Vidya Nikam, Pradnya Joshi, Pragya Sharma, Rupali Chaturvedi, Rasika Nimkarde</p>
 <p>Page No : 1 - 6</p>
-<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V2I2P1</p>.
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V2I2P1</p>
 
 <div>
    <div class="t_share">
@@ -369,6 +369,42 @@ font-style:italic;
 
 <td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V2I2P1</p></td></tr>
 
+<tr style="height: 69px;"><td style="width: 35.5167px; height: 69px; text-align: center;">
+<p> </p><p>02</p></td>
+<td style="text-align: left; width: 534.417px; height: 69px;"><p><a href="http://www.mathsjournal.org/Volume2/Issue2/IJMCT-V2I2P2.pdf" target="_blank" rel="noopener noreferrer">Bayesian Methods for Logistic Regression with Application to Albanian State Matura </a></p>
+<p><img src="/images/Author.png">- Klodiana Bani, Markela Muca</p>
+<p>Page No : 7 - 12</p>
+<p><img src="/images/doi.gif"> 10.29126/24557994/IJMCT-V2I2P2</p>
+
+<div>
+   <div class="t_share">
+   <div id="fb-root"></div>
+   <script>(function(d, s, id) {
+   var js, fjs = d.getElementsByTagName(s)[0];
+   if (d.getElementById(id)) return;
+   js = d.createElement(s); js.id = id;
+   js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.0";
+   fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));</script>
+   <div class="fb-share-button" data-href="http://www.mathsjournal.org/Volume2/Issue2/IJMCT-V2I2P2.pdf" data-layout="button_count"></div>
+   </div>
+
+   <div class="t_share">
+   <script src="//platform.linkedin.com/in.js" type="text/javascript">
+   lang: en_US</script><script type="IN/Share" data-url="http://www.mathsjournal.org/Volume2/Issue2/IJMCT-V2I2P2.pdf" data-counter="right"></script>
+   </div>
+
+   <div class="t_share">
+   <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.mathsjournal.org/Volume2/Issue2/IJMCT-V2I2P2.pdf">Tweet</a>
+   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+   </div></div>
+
+   <div></div><a href='http://scholar.google.com/scholar?hl=en&q=Bayesian Methods for Logistic Regression with Application to Albanian State Matura +mathsjournal.org' target='_blank'><img src='images/google.png' width="68" height="25" style="margin:5px"/></a></div>
+
+</td>
+</td>
+
+<td style="width: 92.0667px; height: 69px;"><p> </p><p>IJMCT-V2I2P2</p></td></tr>
 
 <tr style="height: 24px;">
 <td style="width: 674px; height: 24px; text-align: center;" colspan="3">Paper uploading is in progress. Author(S) are requested to complete their paper formalities.</td></tr>
